scopes macro, names a bit fucked

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tokenizer_macro = { path = "./tokenizer_macro" }
-tokenizer_trait = { path = "./tokenizer_trait" }
-unicode-ident = "1.0.22"
+tokenizer = { path = "./tokenizer" }
+parser = { path = "./parser" }
 
 [workspace]
 members = [
     "tokenizer_macro",
     "tokenizer_trait",
+    "ast_trait",
+    "ast_macros",
+    "parser",
 ]
